--- a/.github/workflows/release_testing.yml
+++ b/.github/workflows/release_testing.yml
@@ -146,6 +146,7 @@ jobs:
       - uses: actions/download-artifact@v3
         id: download_executables
         with:
+          name: hpcflow-release-test-build-win-dir
           path: release-artifacts
 
       - name: Display structure of downloaded files
@@ -157,10 +158,5 @@ jobs:
         with:
           tag_name: test-tag 
           files: |
-            ./release-artifacts/hpcflow-release-test-build-win.exe
-            ./release-artifacts/hpcflow-release-test-build-macOS
-            ./release-artifacts/hpcflow-release-test-build-linux
-            ./release-artifacts/hpcflow-release-test-build-win-dir
-            ./release-artifacts/hpcflow-release-test-build-macOS-dir
-            ./release-artifacts/hpcflow-release-test-build-linux-dir
+            **/release-artifacts/hpcflow-release-test-build-win-dir
           prerelease: true 
