--- a/.github/workflows/release_testing.yml
+++ b/.github/workflows/release_testing.yml
@@ -158,14 +158,7 @@ jobs:
       - uses: actions/download-artifact@v3
         id: download_executables
         with:
-          name: hpcflow-release-test-build-macOS-dir
-
-      - name: Display structure of downloaded files
-        run: ls -R
-
-      - uses: montudor/action-zip@v1
-        with:
-          args: zip -qq -r hpcflow-release-test-build-macOS-dir.zip hpcflow-release-test-build-macOS-dir 
+          name: test_compress.zip 
 
       - name: Display structure of downloaded files
         run: ls -R
@@ -176,5 +169,5 @@ jobs:
         with:
           tag_name: test-tag 
           files: |
-            hpcflow-release-test-build-macOS-dir.zip
+            test_compress.zip
           prerelease: true 
