--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,12 +183,12 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev
 
-      - name: Build with pyinstaller (non Windows, file)
+      - name: Build with pyinstaller (non-Windows, file)
         if: "!contains(matrix.os, 'windows')"
         working-directory: pyinstaller
         run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }} INFO 'onefile'
         
-      - name: Build with pyinstaller (non Windows, folder)
+      - name: Build with pyinstaller (non-Windows, folder)
         if: "!contains(matrix.os, 'windows')"
         working-directory: pyinstaller
         run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name}}-${{ matrix.executable_os }}-dir INFO 'onedir'
@@ -202,18 +202,6 @@ jobs:
         if: contains(matrix.os, 'windows')
         working-directory: pyinstaller
         run: ./make.ps1 -ExeName "hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir" -LogLevel INFO -BuildType 'onedir'
-
-      - name: Upload executable artifact (file)
-        uses: actions/upload-artifact@v3
-        with:
-          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
-          path: pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
-
-      - name: Upload executable artifact (folder)
-        uses: actions/upload-artifact@v3
-        with:
-          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir
-          path: pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir
 
       - name: Version check (windows, file)
         if: contains(matrix.os, 'windows')
@@ -271,6 +259,28 @@ jobs:
         run: |
           pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir${{ matrix.executable_ext }} test
 
+      - name: Compress folder (windows, folder)
+        if: contains(matrix.os, 'windows')
+        working-directory: pyinstaller
+        run: ./compress.ps1 -ExeName "hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir" -BuildType 'onedir'
+
+      - name: Compress folder (non-windows, folder)
+        if: "!contains(matrix.os, 'windows')" 
+        working-directory: pyinstaller
+        run: ./compress.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir 'onedir'
+          
+      - name: Upload executable artifact (file)
+        uses: actions/upload-artifact@v3
+        with:
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
+          path: pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
+
+      - name: Upload executable artifact (compressed folder)
+        uses: actions/upload-artifact@v3
+        with:
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir.zip
+          path: pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir.zip
+
   build-executables-linux:
     runs-on: ubuntu-latest
     needs: bump-version
@@ -307,18 +317,6 @@ jobs:
         working-directory: pyinstaller
         run: ./make.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir INFO onedir
 
-      - name: Upload executable artifact (file)
-        uses: actions/upload-artifact@v3
-        with:
-          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
-          path: pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
-
-      - name: Upload executable artifact (folder)
-        uses: actions/upload-artifact@v3
-        with:
-          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir
-          path: pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir
-
       - name: Version check (file)
         run: |
           tag=${{ needs.bump-version.outputs.new_tag_name }}
@@ -346,6 +344,22 @@ jobs:
       - name: Run test suite on the frozen app (folder)
         run: |
           pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir test
+
+      - name: Compress folder (folder)
+        working-directory: pyinstaller
+        run: ./compress.sh hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir 'onedir'
+
+      - name: Upload executable artifact (file)
+        uses: actions/upload-artifact@v3
+        with:
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
+          path: pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
+
+      - name: Upload executable artifact (compressed folder)
+        uses: actions/upload-artifact@v3
+        with:
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir.zip
+          path: pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir.zip
 
   release-github-PyPI:
     needs: [bump-version, build-executables, build-executables-linux]
@@ -400,9 +414,9 @@ jobs:
             **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-win.exe
             **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-macOS
             **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux
-            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-win-dir
-            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-macOS-dir
-            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir
+            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-win-dir.zip
+            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-macOS-dir.zip
+            **/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir.zip
           prerelease: ${{ github.event.pull_request.base.ref == 'develop' }}
 
       - name: Release info
@@ -411,7 +425,7 @@ jobs:
           binaryYaml=$(python3 -c "
           from pathlib import Path
           out_yaml = ''
-          for i in ['win.exe', 'macOS', 'linux', 'win-dir', 'macOS-dir', 'linux-dir']:
+          for i in ['win.exe', 'macOS', 'linux', 'win-dir.zip', 'macOS-dir.zip', 'linux-dir.zip']:
             exe_name = 'hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-' + i
             url = 'https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}/' + exe_name
             out_yaml += exe_name + ': ' + url + '\n'
