--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,6 @@ platformdirs = "^2.5.1"
 valida = "^0.4.0"
 pytest = {version = "^7.2.0", optional = true}
 click = "^8.1.3"
-psutil = "^5.9.4"
-watchdog = "^2.1.9"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
@@ -43,6 +41,10 @@ pytest = "^7.2.0"
 
 [tool.poetry.group.pyinstaller.dependencies]
 pyinstaller = "^5.5"
+
+[tool.poetry.group.helper.dependencies]
+psutil = "^5.9.4"
+watchdog = "^2.1.9"
 
 [tool.poetry.extras]
 test = ["pytest"]
