--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ pytest = {version = "^7.2.0", optional = true}
 click = "^8.1.3"
 psutil = "^5.9.4"
 watchdog = "^2.1.9"
+msgpack = "^1.0.4"
+reretry = "^0.11.8"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
