--- a/docs/source/released_binaries.yml
+++ b/docs/source/released_binaries.yml
@@ -1,6 +1,6 @@
-hpcflow-v0.2.0a21-win.exe: https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a21/hpcflow-v0.2.0a21-win.exe
-hpcflow-v0.2.0a21-macOS: https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a21/hpcflow-v0.2.0a21-macOS
-hpcflow-v0.2.0a21-linux: https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a21/hpcflow-v0.2.0a21-linux
-hpcflow-v0.2.0a21-win-dir.zip: https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a21/hpcflow-v0.2.0a21-win-dir.zip
-hpcflow-v0.2.0a21-macOS-dir.zip: https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a21/hpcflow-v0.2.0a21-macOS-dir.zip
-hpcflow-v0.2.0a21-linux-dir.zip: https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a21/hpcflow-v0.2.0a21-linux-dir.zip
+hpcflow-v0.0.1-win.exe: https://github.com/hpcflow/hpcflow-new/releases/download/v0.0.1/hpcflow-v0.0.1-win.exe
+hpcflow-v0.0.1-macOS: https://github.com/hpcflow/hpcflow-new/releases/download/v0.0.1/hpcflow-v0.0.1-macOS
+hpcflow-v0.0.1-linux: https://github.com/hpcflow/hpcflow-new/releases/download/v0.0.1/hpcflow-v0.0.1-linux
+hpcflow-v0.0.1-win-dir.zip: https://github.com/hpcflow/hpcflow-new/releases/download/v0.0.1/hpcflow-v0.0.1-win-dir.zip
+hpcflow-v0.0.1-macOS-dir.zip: https://github.com/hpcflow/hpcflow-new/releases/download/v0.0.1/hpcflow-v0.0.1-macOS-dir.zip
+hpcflow-v0.0.1-linux-dir.zip: https://github.com/hpcflow/hpcflow-new/releases/download/v0.0.1/hpcflow-v0.0.1-linux-dir.zip
