--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,6 +124,9 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev,pyinstaller
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Run tests
         run: |
           poetry run python -m pytest --verbose --exitfirst
