--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,6 +109,12 @@ jobs:
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
 
+      - name: Cache the virtualenv
+        uses: actions/cache@v3
+        with:
+          path: ./.venv
+          key: venv-CentOS-test-${{ hashFiles('**/poetry.lock') }}
+
       - name: Install dependencies
         run: poetry install --without dev,pyinstaller
 
