--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -98,15 +98,7 @@ jobs:
 
   test-CentOS:
     needs: pre-commit
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-latest
-          - ubuntu-20.04
-          - ubuntu-18.04
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     container:
       image: aplowman/centos7-poetry
     steps:
