--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ black = "^22.3.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
+pytest-mock = "^3.10.0"
 
 [tool.poetry.group.pyinstaller.dependencies]
 pyinstaller = "^5.5"
