print test so as it runs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -120,4 +120,4 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run python -m pytest --verbose --exitfirst
+          poetry run python -m pytest --verbose --exitfirst -s
