--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,3 +54,28 @@ jobs:
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
+
+  test-CentOS:
+    runs-on: ubuntu-latest
+    container:
+      image: aplowman/centos7-poetry
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Configure poetry
+        run: poetry config virtualenvs.in-project true
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v3
+        with:
+          path: ./.venv
+          key: venv-CentOS-test-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        run: poetry install --without dev,pyinstaller
+
+      - name: Run tests
+        run: |
+          poetry run python3 -m pytest hpcflow/tests/unit/test_helper.py -k 'kill_proc' --verbose --exitfirst -s
