--- a/.github/workflows/test.yml.in
+++ b/.github/workflows/test.yml.in
@@ -101,7 +101,7 @@ jobs:
     needs: pre-commit
     runs-on: ubuntu-latest
     container:
-      image: aplowman/centos7-poetry
+      image: ghcr.io/hpcflow/centos7-poetry:py3.10.9_po1.4.2
     steps:
       - uses: actions/checkout@v3
         with:
@@ -114,7 +114,9 @@ jobs:
           chown -R $(id -u):$(id -g) $PWD
 
       - name: Configure poetry
-        run: poetry config virtualenvs.in-project true
+        run: |
+          poetry config virtualenvs.in-project true
+          poetry config installer.modern-installation false
 
       - name: Cache the virtualenv
         uses: actions/cache@v3
