--- a/hpcflow/sdk/data/template_components/environments.yaml
+++ b/hpcflow/sdk/data/template_components/environments.yaml
@@ -11,7 +11,7 @@
           num_cores: 1
           parallel_mode: null
 
-- name: dummy_env_1
+- name: null_env
 
 - name: lammps_parse_env
   specifiers:
