--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -287,7 +287,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: bump-version
     container:
-      image: ghcr.io/hpcflow/centos7-poetry:py3.11.2_po1.4.2
+      image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -451,7 +451,7 @@ jobs:
 
   build-documentation:
     needs: release-github-PyPI
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -499,7 +499,8 @@ jobs:
         run: python -m pip install poetry==1.4
 
       - name: Configure poetry
-        run: poetry config virtualenvs.in-project true
+        run: |
+             poetry config virtualenvs.in-project true
              poetry config installer.modern-installation false
 
       - name: Install dependencies
