--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,12 @@ ipykernel = "^6.6.1"
 pytest = "^7.2.0"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
-Sphinx = "^4.4.0"
-pydata-sphinx-theme = "^0.8.0"
+sphinx = "^7.0.1"
+pydata-sphinx-theme = "^0.13.3"
 sphinx-jinja = "^2.0.1"
 sphinx-copybutton = "^0.5.0"
 black = "^22.3.0"
+tuna = "^0.5.11"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
