--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ sphinx-jinja = "^2.0.1"
 sphinx-copybutton = "^0.5.0"
 black = "^22.3.0"
 tuna = "^0.5.11"
+sphinx-click = "^4.4.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
