--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ reretry = "^0.11.8"
 psutil = "^5.9.4"
 watchdog = "^2.1.9"
 valida = "^0.7.0"
+paramiko = "^3.2.0"
+aiohttp = "^3.8.4"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
