--- a/.github/workflows/test_pre_python.yml
+++ b/.github/workflows/test_pre_python.yml
@@ -39,6 +39,7 @@ jobs:
           python -m pip install poetry==1.4
           poetry config virtualenvs.in-project true
           poetry config installer.modern-installation false
+          poetry lock
 
       - name: Cache the virtualenv
         uses: actions/cache@v3
