--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ watchdog = "^2.1.9"
 valida = "^0.7.0"
 paramiko = "^3.2.0"
 aiohttp = "^3.8.4"
+rich = "^13.4.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
